cookbooks/olympus/flows/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "flows"
  labels:
    app.kubernetes.io/instance: "flows"
    app.kubernetes.io/name: "flows"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "flows"
      app.kubernetes.io/instance: "flows"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "flows"
        app.kubernetes.io/instance: "flows"
    spec:
      imagePullSecrets:
        - name: zeus-fyi-ext
      containers:
        - name: "flows"
          image: "registry.digitalocean.com/zeus-fyi/flows-backend:latest"
          volumeMounts:
            - mountPath: "/scripts"
              name: "cm-flows"
            - mountPath: "/secrets"
              name: "secrets"
            - mountPath: "/.aws"
              name: "aws-credentials"
          imagePullPolicy: Always
          command: [ "/bin/sh" ]
          args: [ "-c","/scripts/start.sh" ]
          ports:
            - name: "http"
              containerPort: 9001
              protocol: "TCP"
          livenessProbe:
            httpGet:
              path: "/health"
              port: "http"
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: "/health"
              port: "http"
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
            initialDelaySeconds: 30
          resources:
            {}
      volumes:
        - name: cm-flows
          configMap:
            name: cm-flows
            defaultMode: 0744
        - name: secrets
          emptyDir:
            medium: Memory
        - name: aws-credentials
          emptyDir:
            medium: Memory
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
