cookbooks/olympus/flows/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "flows"
  labels:
    app.kubernetes.io/instance: "flows"
    app.kubernetes.io/name: "flows"
    app.kubernetes.io/managed-by: "flows"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: "flows"
    app.kubernetes.io/name: "flows"
