cookbooks/olympus/flows/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "flows"
  namespace: "flows"
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: flows-api-tls
      hosts:
        - api.flows.zeus.fyi
  rules:
    - host: api.flows.zeus.fyi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flows
                port:
                  number: 80
